# CROWDFUZZ

./: .gitignore  Cargo.toml  README copy.md  README.md
basic_mutate/: Cargo.toml
basic_mutate/src/: basic_mutate.rs
basic_postrun/: Cargo.toml
basic_postrun/src/: basic_postrun.rs
basic_run/: Cargo.toml
basic_run/src/: basic_run.rs  linux.rs  windows.rs
basic_select/: Cargo.toml
basic_select/src/: basic_select.rs
cf_tui/: Cargo.toml  README.md
cf_tui/src/: main.rs  state.rs  ui.rs
cflib/: Cargo.toml  build.rs
cflib/include/: cf_core.h  cf_error.h  cf_log.h  cf_stat.h  cf_store.h  cflib.h
cflib/src/: core.rs  helpers.rs  input.rs  lib.rs  macros.rs  stats.rs  store.rs
cflib_old/: .gitignore  Cargo.toml
cflib_old/include/: cf_error.h  cf_log.h  cf_stat.h  cflib.h
cflib_old/src/: lib.rs  stat_parsing.rs
cflib_rs/: Cargo.toml  build.rs
cflib_rs/src/: core.rs  helpers.rs  lib.rs  macros.rs  stats.rs
core/: Cargo.toml
core/example/: fuzz_gzip.yaml
core/src/: config.rs  core.rs  interface.rs  log.rs  main.rs  plugin.rs  stats.rs  store.rs  util.rs
docs/: plugin_dev.md
example/: fuzz_gzip.yaml  fuzz_gzip_linux.yaml  linux_test.yaml  test_plugin.yaml  windows_test.yaml
plugins/afl/afl_fork_server/: .gitignore  Cargo.toml  build.rs
plugins/afl/afl_fork_server/.cargo/: config
plugins/afl/afl_fork_server/res/: README.md  wrapper.h
plugins/afl/afl_fork_server/src/: afl_fork_server.rs
plugins/afl/afl_fork_server/src/windows/: client.rs  mod.rs  server.rs
plugins/afl/afl_fork_server/src/windows/handlers/: debug.rs  events.rs  fuzz.rs  mod.rs
plugins/afl/afl_init/: Cargo.toml
plugins/afl/afl_init/src/: afl_init.rs
plugins/afl/afl_lib/: Cargo.toml
plugins/afl/afl_lib/src/: defines.rs  lib.rs
plugins/afl/afl_mutate/: Cargo.toml
plugins/afl/afl_mutate/src/: afl_mutate.rs  arithmetic.rs  bit_flip.rs  havoc.rs  interesting.rs  mutators.rs
plugins/afl/afl_queue/: Cargo.toml
plugins/afl/afl_state/: Cargo.toml
plugins/afl/afl_state/src/: afl_state.rs
plugins/basic_mutate/: Cargo.toml
plugins/basic_mutate/src/: basic_mutate.rs  old.rs
plugins/basic_postrun/: Cargo.toml
plugins/basic_postrun/src/: basic_postrun.rs
plugins/basic_run/: Cargo.toml
plugins/basic_run/src/: basic_run.rs  windows.rs
plugins/basic_select/: Cargo.toml
plugins/basic_select/src/: basic_select.rs
plugins/fs_store/: Cargo.toml
plugins/fs_store/src/: fs_store.rs  helpers.rs
plugins/random_select/: Cargo.toml
plugins/random_select/src/: random_select.rs
plugins/run_target/: Cargo.toml
plugins/run_target/src/: linux.rs  run_target.rs
plugins/save_result/: Cargo.toml  README.md
plugins/save_result/src/: save_result.rs
plugins/select_input/: Cargo.toml
plugins/select_input/src/: select_input.rs
plugins/test_plugin/: Cargo.toml
plugins/test_plugin/src/: test_plugin.rs
