[workspace]
members = [
    "cflib",
    "core",
    "plugins/test_plugin",
    "plugins/fs_store",
    "plugins/select_input",
    "plugins/basic_mutate",
    "plugins/run_target",
    "plugins/save_result",
    
    "plugins/afl/afl_lib",
    "plugins/afl/afl_state",
    "plugins/afl/afl_mutate",
    "plugins/afl/afl_fork_server",
    
]

exclude = [
    "cf_tui"
]