[package]
name = "cf_tui"
version = "0.1.0"
authors = ["ElasT0ny <elast0ny00@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cflib = {path='../cflib'}
simple_parse = {path = "../../simple_parse"}

log = "*"
env_logger = "*"

shared_memory = "0.*"
clap = "2.*"
crossterm = "0.*"
tui = {version = "0.*", features = ["crossterm"], default-features = false}
sysinfo = "0.*"