[package]
name = "cflib"
version = "0.0.1"
authors = ["Elast0ny <Elast0ny00@gmail.com>"]
edition = "2018"

[lib]
name = "cflib"

[dependencies]
libc = "0.2"
log = "0.*"

[dependencies.nom]
version = "5.*"
optional = true

[build-dependencies]
bindgen = "0.*"

[features]
default = ["stat_parser"]
stat_parser = ["nom"]