[package]
name = "run_target"
version = "0.0.5"
authors = ["Elast0ny <Elast0ny00@gmail.com>"]
edition = "2018"

[lib]
path = "src/run_target.rs"
name = "run_target"
crate-type = ["cdylib"] # Compile to native lib

[dependencies]
cflib = {path="../../cflib"}
cfg-if = "0.*"
log = "0.*"
wait-timeout = "0.*"