[package]
name = "afl_fork_server"
version = "0.0.1"
authors = ["Elast0ny <Elast0ny00@gmail.com>"]
edition = "2018"

[lib]
path = "src/afl_fork_server.rs"
name = "afl_fork_server"
crate-type = ["cdylib"] # Compile to native lib

[dependencies]
cflib = {path="../../../cflib"}
afl_lib = {path="../afl_lib"}
cfg-if = "0.*"

[target.'cfg(windows)'.dependencies]
enum-primitive-derive = "0.2"
num-traits = "0.1"
simple_parse = {path = "../../../../simple_parse"}
winapi = {version = "0.*", features = ["minwinbase", "winnt"]}
dynamorio-sys = {version = "8.0", features = ["mgr", "x", "reg", "wrap", "syms"]}
widestring = "0.4"
